--- a/httpd/web/08.html
+++ b/httpd/web/08.html
@@ -6,7 +6,7 @@
         <p>いまなにしてる？</p>
         <form action="/cgi-bin/tweet.pl" method="POST">
             <input type="text" name="yourname"><br/>
-            <input type="text" name="message">
+            <textarea name="message" rows="4"></textarea>
             <input type="submit">
         </form>
     </body>
